# choria

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README  build.sh  install_irrlicht.sh  package-mingw.sh
assets/art/: make_4k.sh  make_atlas.sh  make_pngs.sh  sign.xcf  vector_armors.svgz  vector_boots.svgz  vector_buffs.svgz  vector_helms.svgz  vector_items.svgz  vector_map.svgz  vector_models.svgz  vector_monsters.svgz  vector_portraits.svgz  vector_shields.svgz  vector_skills.svgz  vector_weapons.svgz
assets/art/raster/: body.xcf.xz  hud.xcf.xz  inventory.xcf.xz  logo.xcf.xz  map.xcf.xz  orb.xcf.xz  sign.xcf.xz  skills.xcf.xz  slot.xcf.xz  slot_48.xcf.xz  squareorb.xcf.xz  (+3 more)
assets/data/: .gitignore  droprate.ods  dump.bat  dump.txt  gold.gpi  graph.sh  heal.ods  import.bat  import.txt  levels.ods  restore.bat  stats.db  stats.txt  upgrades.ods
assets/source/: pack.py  process.sh
assets/tiles/: make_atlas.sh
assets/web/: edit.html  index.html  layout.html  server.py
assets/webtool/: connection.php  data.php  data.s3db  data_ae.php  functions.js  monsterdrops.php  monsters.php  style.css  topinclude.php  traderitems.php  traders.php  vendoritems.php  vendors.php  zonedata.php  zones.php
assets/working/: pack.py  process.sh
cmake/: FindJSONCpp.cmake  version.cmake
codelite/: choria.project  choria.workspace
deployment/: build_mingw.sh  changelog.txt  choria  choria.desktop  choria.xpm  install-win.nsi  installer.nsi  make_src.sh  readme.txt  resource.rc  upload_release.sh
ext/enet/: enet.h  protocol.c  unix.c  win32.c
src/: account.cpp  account.h  actions.cpp  actions.h  actiontype.h  assets.cpp  assets.h  atlas.cpp  atlas.h  audio.cpp  audio.h  bot.cpp  bot.h  buffer.cpp  buffer.h  camera.cpp  camera.h  characters.cpp  characters.h  client.cpp  client.h  config.cpp  config.h  connect.cpp  connect.h  constants.h  createcharacter.cpp  createcharacter.h  database.cpp  database.h  enums.h  factory.cpp  factory.h  files.cpp  files.h  filestream.cpp  filestream.h  font.cpp  font.h  framelimit.h  (+52 more)
src/ae/: actions.cpp  actions.h  assets.cpp  assets.h  atlas.cpp  atlas.h  audio.cpp  buffer.cpp  buffer.h  camera.cpp  camera.h  clientnetwork.cpp  clientnetwork.h  database.cpp  database.h  files.cpp  files.h  font.cpp  font.h  framelimit.h  graphics.cpp  graphics.h  input.cpp  input.h  manager.cpp  manager.h  managerbase.cpp  managerbase.h  network.cpp  network.h  opengl.cpp  peer.cpp  peer.h  physics.cpp  physics.h  program.cpp  program.h  random.cpp  servernetwork.cpp  servernetwork.h  (+9 more)
src/enet/: enet.h  license.txt  protocol.c  protocol.h  unix.c  win32.c
src/engine/: config.cpp  config.h  constants.h  database.cpp  database.h  filestream.cpp  filestream.h  game.cpp  game.h  globals.cpp  globals.h  graphics.cpp  graphics.h  hud.cpp  hud.h  input.cpp  input.h  instances.cpp  instances.h  objectmanager.cpp  objectmanager.h  random.cpp  random.h  singleton.h  state.h  stats.cpp  stats.h
src/hud/: blacksmith_screen.cpp  blacksmith_screen.h  character_screen.cpp  character_screen.h  enchanter_screen.cpp  enchanter_screen.h  hud.cpp  hud.h  inventory_screen.cpp  inventory_screen.h  screen.cpp  screen.h  skill_screen.cpp  skill_screen.h  stash_screen.cpp  stash_screen.h  trade_screen.cpp  trade_screen.h  trader_screen.cpp  trader_screen.h  vendor_screen.cpp  vendor_screen.h
src/instances/: battle.cpp  battle.h  clientbattle.cpp  clientbattle.h  map.cpp  map.h  serverbattle.cpp  serverbattle.h
src/network/: clientnetwork.cpp  clientnetwork.h  multinetwork.cpp  multinetwork.h  network.cpp  network.h  oldmultinetwork.cpp  oldmultinetwork.h  oldnetwork.cpp  oldnetwork.h  oldsinglenetwork.cpp  oldsinglenetwork.h  packetstream.cpp  packetstream.h  peer.cpp  peer.h  servernetwork.cpp  servernetwork.h  singlenetwork.cpp  singlenetwork.h
src/objects/: action.cpp  action.h  battle.cpp  battle.h  buff.cpp  buff.h  fighter.cpp  fighter.h  grid.cpp  grid.h  inventory.cpp  inventory.h  item.cpp  item.h  managerbase.cpp  managerbase.h  map.cpp  map.h  minigame.cpp  minigame.h  monster.cpp  monster.h  object.cpp  object.h  player.cpp  player.h  skill.cpp  skill.h  sprite.cpp  sprite.h  statchange.cpp  statchange.h  statuseffect.cpp  statuseffect.h  usable.cpp  usable.h
src/states/: account.cpp  account.h  benchmark.cpp  benchmark.h  bot.cpp  bot.h  bots.cpp  bots.h  characters.cpp  characters.h  client.cpp  client.h  connect.cpp  connect.h  createcharacter.cpp  createcharacter.h  dedicated.cpp  dedicated.h  editor.cpp  editor.h  main.cpp  mainmenu.cpp  mainmenu.h  mapeditor.cpp  mapeditor.h  null.cpp  null.h  oldclient.cpp  oldclient.h  oldserver.cpp  oldserver.h  play.cpp  play.h  playclient.cpp  playclient.h  playserver.cpp  playserver.h  server.cpp  server.h  test.cpp  (+1 more)
src/tinythread/: tinythread.h
src/ui/: button.cpp  button.h  element.cpp  element.h  image.cpp  image.h  label.cpp  label.h  style.h  textbox.cpp  textbox.h  ui.cpp  ui.h
webtool/: connection.php  index.php  monsters.php  style.css  topinclude.php  vendoritems.php
working/data/: levels.tsv  lights.tsv  stats.xml  strings.tsv  tiles.tsv
working/database/: data.db  data.s3db
working/fonts/: font_10.xml  font_14.xml  font_18.xml  font_7.xml  font_8.xml
working/maps/: a_mcave0.map  a_town0.map  a_wcave0.map  a_world.map  start_cave0.map  start_cave1.map  start_cave2.map  start_cave3.map  start_maus0.map  start_maus1.map  start_town0.map  start_town1.map  start_world.map
working/scripts/: ai.lua  battle.lua  bot.lua  buffs.lua  data.lua  default.lua  game.lua  items.lua  lights.lua  procs.lua  scripts.lua  sets.lua  skills.lua  spells.lua
working/shaders/: map.frag  map.vert  map_object.frag  map_object.vert  ortho_pos_uv.vert  ortho_pos_uv_array.frag  ortho_pos_uv_array.vert  pos_uv.vert  pos_uv_norm.frag  pos_uv_static.frag  programs.tsv  test.frag  test.vert  text.vert
working/stats/: stats.db
working/tables/: colors.tsv  fonts.tsv  layers.tsv  programs.tsv  stats.xml  styles.tsv  ui.xml
working/textures/: map_nearest
working/ui/: colors.tsv  fonts.tsv  styles.tsv  ui.xml
(+83 files in other folders)
